--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
             <ul>
                 <li>当サイトの素材を利用したことによって発生したトラブルや事故などについて当サイトの管理者及び関係者はその責任を一切負いません</li>
                 <li>
-                    商用・非商用に関わらず利用許諾などの連絡は不要です。もし可能ならクレジットなどにサイト名を入れてくれたらうれしいです
+                    商用・非商用に関わらず利用許諾などの連絡は不要です。
+                </li>
+                <li>
+                    連絡は不要と言ったものの、事後報告で『良いのでこのコンテンツで使ったよ！』って教えてくれたら管理者（@UDONKONET）が喜びます！もし可能ならクレジットなどにサイト名を入れてくれたらうれしいです
                 </li>
 
             </ul>
@@ -93,6 +96,6 @@
     </div>
     </div>
     <footer>
-        -- 8bit sounds -- &copy; <a href="https://udonko.net">UDONKONET</a>
+        &copy; <a href="https://udonko.net">UDONKONET</a>
     </footer>
 </body>
