--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     商用・非商用に関わらず利用許諾などの連絡は不要です。
                 </li>
                 <li>
-                    連絡は不要と言ったものの、事後報告で『良いのでこのコンテンツで使ったよ！』って教えてくれたら管理者（@UDONKONET）が喜びます！もし可能ならクレジットなどにサイト名を入れてくれたらうれしいです
+                    連絡は不要と言ったものの、事後報告で良いので『このコンテンツで使ったよ！』って教えてくれたら管理者（@UDONKONET）が喜びます！もし可能ならクレジットなどにサイト名を入れてくれたらうれしいです
                 </li>
 
             </ul>
