--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
         </div>
     </div>
     <div id="main">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!-- 8BITバナー -->
+        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3324877759270339"
+            data-ad-slot="4601333645" data-ad-format="auto" data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
         <h2 id="headline">8BITSOUNDSとは</h2>
         <hr />
         <div id="contents"></div>
@@ -58,7 +65,13 @@
                 ファミコンのような8ビットサウンドの効果音を集めています。<br />
                 スマホアプリでもゲームでも動画でも、無料で何にでもご利用いただけます！
             </p>
-
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <!-- 8BITバナー -->
+            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3324877759270339"
+                data-ad-slot="4601333645" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
             <br /><br /><br />
             <h2>利用規約</h2>
             <hr />
@@ -93,7 +106,15 @@
 
             </ul>
         </div>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!-- 8bitスクエア -->
+        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3324877759270339"
+            data-ad-slot="7037577680" data-ad-format="auto" data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
     </div>
+
     </div>
     <footer>
         &copy; <a href="https://udonko.net">UDONKONET</a>
