とりあえずリリースバージョン１

--- a/public/index.html
+++ b/public/index.html
@@ -12,44 +12,43 @@
 </head>
 
 <body>
-    <header>
-        <div>
-            <a href="index.html">
-                <h1>8BITSOUNDS</h1>
-            </a>
+    <div id="wrapper">
+        <header>
+            <div>
+                <a href="index.html">
+                    <h1>8BITSOUNDS</h1>
+                </a>
+            </div>
+            <div>
+                <h4>再配布・商用利用OK！　ファミコン風8BIT効果音フリー素材集</h4>
+            </div>
+        </header>
+        <div id="navigation">
+            <div class="menu">
+                <a href="#" onclick="openMenu('Pickup_Coin','コイン');">コイン</a>
+            </div>
+            <div class="menu">
+                <a href="#" onclick="openMenu('Laser_Shoot','レーザー');">レーザー</a>
+            </div>
+            <div class="menu">
+                <a href="#" onclick="openMenu('Explosion','爆発');">爆発</a>
+            </div>
+            <div class="menu">
+                <a href="#" onclick="openMenu('Powerup','パワーアップ');">パワーアップ</a>
+            </div>
+            <div class="menu">
+                <a href="#" onclick="openMenu('Hit_Hurt','攻撃');">攻撃</a>
+            </div>
+            <div class="menu">
+                <a href="#" onclick="openMenu('Jump','ジャンプ');">ジャンプ</a>
+            </div>
+            <div class="menu">
+                <a href="#" onclick="openMenu('Blip_Select','ビープ音');">ビープ音</a>
+            </div>
+            <div class="menu">
+                <a href="#" onclick="openMenu('Randomize','いろいろ');">いろいろ</a>
+            </div>
         </div>
-        <div>
-            <h4>再配布・商用利用OK！　ファミコン風8BIT効果音フリー素材集</h4>
-        </div>
-
-    </header>
-    <div id="navigation">
-        <div class="menu">
-            <a href="#" onclick="openMenu('Pickup_Coin','コイン');">コイン</a>
-        </div>
-        <div class="menu">
-            <a href="#" onclick="openMenu('Laser_Shoot','レーザー');">レーザー</a>
-        </div>
-        <div class="menu">
-            <a href="#" onclick="openMenu('Explosion','爆発');">爆発</a>
-        </div>
-        <div class="menu">
-            <a href="#" onclick="openMenu('Powerup','パワーアップ');">パワーアップ</a>
-        </div>
-        <div class="menu">
-            <a href="#" onclick="openMenu('Hit_Hurt','攻撃');">攻撃</a>
-        </div>
-        <div class="menu">
-            <a href="#" onclick="openMenu('Jump','ジャンプ');">ジャンプ</a>
-        </div>
-        <div class="menu">
-            <a href="#" onclick="openMenu('Blip_Select','ビープ音');">ビープ音</a>
-        </div>
-        <div class="menu">
-            <a href="#" onclick="openMenu('Randomize','いろいろ');">いろいろ</a>
-        </div>
-    </div>
-    <div id="main">
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <!-- 8BITバナー -->
         <ins class="adsbygoogle" style="display:inline-block;width:800px;height:100px"
@@ -57,66 +56,85 @@
         <script>
             (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
-        <h2 id="headline">8BITSOUNDSとは</h2>
-        <hr />
-        <div id="contents"></div>
-        <div id="top">
-            <p>8BITSOUNDSは完全無料の音素材集です。<br />
-                ファミコンのような8ビットサウンドの効果音を集めています。<br />
-                スマホアプリでもゲームでも動画でも、無料で何にでもご利用いただけます！
-            </p>
-            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-            <!-- 8BITバナー -->
-            <ins class="adsbygoogle" style="display:inline-block;width:800px;height:100px"
-                data-ad-client="ca-pub-3324877759270339" data-ad-slot="4601333645"></ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-            <br /><br /><br />
-            <h2>利用規約</h2>
-            <hr />
-            <h3><i class="fas fa-thumbs-up good"></i> やってもよいこと</h3>
-            <p>
-                <ul>
-                    <li>
-                        商用・非商用に関わらずアプリ、ゲーム、ウェブサイト、動画などの音素材としての利用
-                    </li>
-                    <li>
-                        加工・無加工を問わず、無料での再配布
-                    </li>
-                </ul>
-            </p>
-            <h3><i class="fas fa-skull-crossbones error"></i> 禁止事項</h3>
-            <p>
-                <ul>
-                    <li>公序良俗に反する行為での利用</li>
-                    <li>有料での再配布</li>
-                    <li>当サイトの管理者が不適切と判断した利用方法</li>
-                </ul>
-            </p>
-            <h3><i class="fas fa-exclamation-triangle warning"></i> 注意事項</h3>
-            <ul>
-                <li>当サイトの素材を利用したことによって発生したトラブルや事故などについて当サイトの管理者及び関係者はその責任を一切負いません</li>
-                <li>
-                    商用・非商用に関わらず利用許諾などの連絡は不要です。
-                </li>
-                <li>
-                    連絡は不要と言ったものの、事後報告で良いので『このコンテンツで使ったよ！』って教えてくれたら管理者（@UDONKONET）が喜びます！もし可能ならクレジットなどにサイト名を入れてくれたらうれしいです
-                </li>
+        <div id="container">
+            <div id="contents">
+                <div id="download">
 
-            </ul>
+                </div>
+                <div id="main">
+                    <section id="about">
+                        <h2>8BITSOUNDS</h2>
+                        <hr />
+
+                        <p>8BITSOUNDSは完全無料の音素材集です。<br />
+                            ファミコンのような8ビットサウンドの効果音を集めています。<br />
+                            スマホアプリでもゲームでも動画でも、無料で何にでもご利用いただけます！<br />
+                            ドット絵を使ったかジャジュアルゲームなんかに向いてるんじゃないかな？
+                        </p>
+                    </section>
+                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                    <!-- 8bitスクエア -->
+                    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3324877759270339"
+                        data-ad-slot="7037577680" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                    <script>
+                        (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
+                    <br /><br />
+                    <section id="rule">
+                        <h2>利用規約</h2>
+                        <hr />
+                        <h3><i class="fas fa-thumbs-up good"></i> やってもよいこと</h3>
+                        <p>
+                            <ul>
+                                <li>
+                                    商用・非商用に関わらずアプリ、ゲーム、ウェブサイト、動画などの音素材としての利用
+                                </li>
+                                <li>
+                                    加工・無加工を問わず、無料での再配布
+                                </li>
+                            </ul>
+                        </p>
+                        <h3><i class="fas fa-skull-crossbones error"></i> 禁止事項</h3>
+                        <p>
+                            <ul>
+                                <li>公序良俗に反する行為での利用</li>
+                                <li>有料での再配布</li>
+                                <li>当サイトの管理者が不適切と判断した利用方法</li>
+                            </ul>
+                        </p>
+                        <h3><i class="fas fa-exclamation-triangle warning"></i> 注意事項</h3>
+                        <ul>
+                            <li>当サイトの素材を利用したことによって発生したトラブルや事故などについて当サイトの管理者及び関係者はその責任を一切負いません</li>
+                            <li>
+                                商用・非商用に関わらず利用許諾などの連絡は不要です。
+                            </li>
+                            <li>
+                                連絡は不要と言ったものの、事後報告で良いので『このコンテンツで使ったよ！』って教えてくれたら管理者（@UDONKONET）が喜びます！もし可能ならクレジットなどにサイト名を入れてくれたらうれしいです
+                            </li>
+
+                        </ul>
+                    </section>
+                </div>
+            </div>
+            <div id="ad">
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <!-- 8bitスクエア -->
+                <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3324877759270339"
+                    data-ad-slot="7037577680" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+            </div>
         </div>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-        <!-- 8bitスクエア -->
-        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3324877759270339"
-            data-ad-slot="7037577680" data-ad-format="auto" data-full-width-responsive="true"></ins>
+        <!-- 8BITバナー -->
+        <ins class="adsbygoogle" style="display:inline-block;width:800px;height:100px"
+            data-ad-client="ca-pub-3324877759270339" data-ad-slot="4601333645"></ins>
         <script>
             (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
+        <footer>
+            &copy; <a href="https://udonko.net">UDONKONET</a>
+        </footer>
     </div>
-
-    </div>
-    <footer>
-        &copy; <a href="https://udonko.net">UDONKONET</a>
-    </footer>
 </body>
