--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
                         <p>8BITSOUNDSは完全無料の音素材集です。<br />
                             ファミコンのような8ビットサウンドの効果音を集めています。<br />
                             スマホアプリでもゲームでも動画でも、無料で何にでもご利用いただけます！<br />
-                            ドット絵を使ったかジャジュアルゲームなんかに向いてるんじゃないかな？
+                            ドット絵を使ったカジュアルゲームなんかに向いてるんじゃないかな？
                         </p>
                     </section>
                     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
