リンク修正

--- a/public/index.html
+++ b/public/index.html
@@ -144,7 +144,7 @@
             (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
         <footer>
-            &copy; <a href="https://udonko.net">UDONKONET</a>
+            &copy; <a href="https://www.udonko.net">UDONKONET</a>
         </footer>
     </div>
 </body>
