--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 
 <head>
-    <title>8BITSOUNDS -- 完全無料で商用可！フリーのファミコン風8BIT効果音素材 --</title>
+    <title>8BITSOUNDS -- 完全無料で商用可！フリーのファミコン風8BIT効果音素材集 --</title>
     <meta charset="UTF-8">
+    <meta property="og:title" content="8BITSOUNDS" />
+    <meta property="og:site_name" content="8BITSOUNDS" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="完全無料で商用可！フリーのファミコン風8BIT効果音素材集" />
+    <meta property="og:url" content="https://sounds.udonko.net" />
+    <meta property="og:image" content="https://sounds.udonko.net/ogp.png" />
+
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <link href="style.css" rel="stylesheet">
     <script src="script.js"></script>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149682722-1"></script>
     <script>
@@ -18,7 +26,6 @@
 
         gtag('config', 'UA-149682722-1');
     </script>
-
 </head>
 
 <body>
@@ -75,7 +82,6 @@
                     <section id="about">
                         <h2>8BITSOUNDS</h2>
                         <hr />
-
                         <p>8BITSOUNDSは完全無料の音素材集です。<br />
                             ファミコンのような8ビットサウンドの効果音を集めています。<br />
                             スマホアプリでもゲームでも動画でも、無料で何にでもご利用いただけます！<br />
