--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,27 @@
 
         gtag('config', 'UA-149682722-1');
     </script>
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.2.0/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+    <script>
+        // Your web app's Firebase configuration
+        var firebaseConfig = {
+            apiKey: "AIzaSyCUewJtKXDW4HK9V-i79AzYxR7IG8zgLTU",
+            authDomain: "udonkonet-4deef.firebaseapp.com",
+            databaseURL: "https://udonkonet-4deef.firebaseio.com",
+            projectId: "udonkonet-4deef",
+            storageBucket: "udonkonet-4deef.appspot.com",
+            messagingSenderId: "824449143952",
+            appId: "1:824449143952:web:a224c9be9e8c2cd0c1f415"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+    </script>
 </head>
 
 <body>
