--- a/public/index.html
+++ b/public/index.html
@@ -16,37 +16,26 @@
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <link href="style.css" rel="stylesheet">
     <script src="script.js"></script>
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149682722-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-149682722-1');
-    </script>
-
 </head>
 
 <body>
     <!-- Firebase analyticsの設置 -->
     <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.5.2/firebase-app.js"></script>
     <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
-    <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.5.2/firebase-analytics.js"></script>
     <script>
         // Your web app's Firebase configuration
-        var firebaseConfig = {
+        const firebaseConfig = {
             apiKey: "AIzaSyCUewJtKXDW4HK9V-i79AzYxR7IG8zgLTU",
             authDomain: "udonkonet-4deef.firebaseapp.com",
             databaseURL: "https://udonkonet-4deef.firebaseio.com",
             projectId: "udonkonet-4deef",
             storageBucket: "udonkonet-4deef.appspot.com",
             messagingSenderId: "824449143952",
-            appId: "1:824449143952:web:a224c9be9e8c2cd0c1f415",
-            measurementId: "G-9F8STCHVBN"
+            appId: "1:824449143952:web:84fab824164baf9dc1f415",
+            measurementId: "G-MK8KT3PMMP"
         };
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
@@ -142,7 +131,6 @@
                                 <li>当サイトの管理者が不適切と判断した利用方法</li>
                             </ul>
                         </p>
-                        <h3><i class="fas fa-exclamation-triangle warning"></i> 注意事項</h3>
                         <ul>
                             <li>当サイトの素材を利用したことによって発生したトラブルや事故などについて当サイトの管理者及び関係者はその責任を一切負いません</li>
                             <li>
