テキスト修正

--- a/public/index.html
+++ b/public/index.html
@@ -131,16 +131,18 @@
                                 <li>当サイトの管理者が不適切と判断した利用方法</li>
                             </ul>
                         </p>
-                        <ul>
-                            <li>当サイトの素材を利用したことによって発生したトラブルや事故などについて当サイトの管理者及び関係者はその責任を一切負いません</li>
-                            <li>
-                                商用・非商用に関わらず利用許諾などの連絡は不要です。
-                            </li>
-                            <li>
-                                連絡は不要と言ったものの、事後報告で良いので『このコンテンツで使ったよ！』って教えてくれたら管理者（@UDONKONET）が喜びます！もし可能ならクレジットなどにサイト名を入れてくれたらうれしいです
-                            </li>
-
-                        </ul>
+                        <h3><i class="fas fa-exclamation-triangle warning"></i> 注意事項</h3>
+                        <p>
+                            <ul>
+                                <li>当サイトの素材を利用したことによって発生したトラブルや事故などについて当サイトの管理者及び関係者はその責任を一切負いません</li>
+                                <li>
+                                    商用・非商用に関わらず利用許諾などの連絡は不要です。
+                                </li>
+                                <li>
+                                    連絡は不要と言ったものの、事後報告で良いので『このコンテンツで使ったよ！』って教えてくれたら管理者（@UDONKONET）が喜びます！もし可能ならクレジットなどにサイト名を入れてくれたらうれしいです
+                                </li>
+                            </ul>
+                        </p>
                     </section>
                 </div>
             </div>
