--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="ja">
 
 <head>
     <title>8BITSOUNDS -- 完全無料で商用可！フリーのファミコン風8BIT効果音素材集 --</title>
@@ -113,36 +114,31 @@
                         <h2>利用規約</h2>
                         <hr />
                         <h3><i class="fas fa-thumbs-up good"></i> やってもよいこと</h3>
-                        <p>
-                            <ul>
-                                <li>
-                                    商用・非商用に関わらずアプリ、ゲーム、ウェブサイト、動画などの音素材としての利用
-                                </li>
-                                <li>
-                                    加工・無加工を問わず、無料での再配布
-                                </li>
-                            </ul>
-                        </p>
+                        <ul>
+                            <li>
+                                商用・非商用に関わらずアプリ、ゲーム、ウェブサイト、動画などの音素材としての利用
+                            </li>
+                            <li>
+                                加工・無加工を問わず、無料での再配布
+                            </li>
+                        </ul>
+
                         <h3><i class="fas fa-skull-crossbones error"></i> 禁止事項</h3>
-                        <p>
-                            <ul>
-                                <li>公序良俗に反する行為での利用</li>
-                                <li>有料での再配布</li>
-                                <li>当サイトの管理者が不適切と判断した利用方法</li>
-                            </ul>
-                        </p>
+                        <ul>
+                            <li>公序良俗に反する行為での利用</li>
+                            <li>有料での再配布</li>
+                            <li>当サイトの管理者が不適切と判断した利用方法</li>
+                        </ul>
                         <h3><i class="fas fa-exclamation-triangle warning"></i> 注意事項</h3>
-                        <p>
-                            <ul>
-                                <li>当サイトの素材を利用したことによって発生したトラブルや事故などについて当サイトの管理者及び関係者はその責任を一切負いません</li>
-                                <li>
-                                    商用・非商用に関わらず利用許諾などの連絡は不要です。
-                                </li>
-                                <li>
-                                    連絡は不要と言ったものの、事後報告で良いので『このコンテンツで使ったよ！』って教えてくれたら管理者（@UDONKONET）が喜びます！もし可能ならクレジットなどにサイト名を入れてくれたらうれしいです
-                                </li>
-                            </ul>
-                        </p>
+                        <ul>
+                            <li>当サイトの素材を利用したことによって発生したトラブルや事故などについて当サイトの管理者及び関係者はその責任を一切負いません</li>
+                            <li>
+                                商用・非商用に関わらず利用許諾などの連絡は不要です。
+                            </li>
+                            <li>
+                                連絡は不要と言ったものの、事後報告で良いので『このコンテンツで使ったよ！』って教えてくれたら管理者（@UDONKONET）が喜びます！もし可能ならクレジットなどにサイト名を入れてくれたらうれしいです
+                            </li>
+                        </ul>
                     </section>
                 </div>
             </div>
@@ -168,3 +164,5 @@
         </footer>
     </div>
 </body>
+
+</html>
